# SmartLabBackend/internal/pkg/controllers/create-med-card.go
@@ -6,7 +6,7 @@ import (
 	"oat-lab-module/internal/pkg/models"
 )
 
-type CreateProfileRequest struct {
+type CreateMedCardRequest struct {
 	Email        string         `json:"email"`
 	FirstName    string         `json:"firstName"`
 	LastName     string         `json:"lastName"`
@@ -16,33 +16,33 @@ type CreateProfileRequest struct {
 	Sex          models.SexType `json:"sex"`
 }
 
-type CreateProfileResponse struct {
+type CreateMedCardResponse struct {
 	Success bool   `json:"success"`
 	Message string `json:"message,omitempty"`
 }
 
-// CreateProfile создает профиль пользователя
+// CreateMedCard создает профиль пользователя
 //
 //	@Summary		Создание профиля пользователя
 //	@Description	Создает профиль пользователя с указанными данными
-//	@Tags			Profiles
+//	@Tags			MedCards
 //	@Accept			json
 //	@Produce		json
-//	@Param			request	body		CreateProfileRequest	true	"Запрос для создания профиля пользователя"
-//	@Success		201		{object}	CreateProfileResponse
-//	@Failure		400		{object}	CreateProfileResponse
-//	@Failure		500		{object}	CreateProfileResponse
-//	@Router			/profile [post]
-func (s *Server) CreateProfile(c *gin.Context) {
-	var request CreateProfileRequest
+//	@Param			request	body		CreateMedCardRequest	true	"Запрос для создания профиля пользователя"
+//	@Success		201		{object}	CreateMedCardResponse
+//	@Failure		400		{object}	CreateMedCardResponse
+//	@Failure		500		{object}	CreateMedCardResponse
+//	@Router			/med-card [post]
+func (s *Server) CreateMedCard(c *gin.Context) {
+	var request CreateMedCardRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
-		c.JSON(http.StatusBadRequest, CreateProfileResponse{Success: false, Message: err.Error()})
+		c.JSON(http.StatusBadRequest, CreateMedCardResponse{Success: false, Message: err.Error()})
 		return
 	}
 	err := s.storage.CreateProfile(*s.cfg, request.Email, request.FirstName, request.LastName, request.MiddleName, request.BirthDate, request.Sex, request.ProfileImage)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, CreateProfileResponse{Success: false, Message: err.Error()})
+		c.JSON(http.StatusInternalServerError, CreateMedCardResponse{Success: false, Message: err.Error()})
 		return
 	}
-	c.JSON(http.StatusCreated, CreateProfileResponse{Success: true})
+	c.JSON(http.StatusCreated, CreateMedCardResponse{Success: true})
 }
