# SmartLabBackend/internal/pkg/controllers/get-catalog-item-by-Id.go
@@ -6,17 +6,21 @@ import (
 )
 
 type GetCatalogItemByIdRequest struct {
-	Id uint32 `json:"itemId"`
+	Id uint32 `form:"itemId"`
 }
+
 type GetCatalogItemByIdResponse struct {
-	ErrorMessage string  `json:"errorMessage,omitempty"`
-	Id           uint32  `gorm:"primaryKey" json:"id"`
-	Name         string  `json:"name"`
-	Description  string  `json:"description"`
-	Price        float32 `json:"price"`
-	Category     string  `json:"category"`
-	ImageUrl     string  `json:"imageUrl"`
-	CreatedAt    string  `json:"createdAt"`
+	ErrorMessage string `json:"errorMessage,omitempty"`
+	Id           uint32 `gorm:"primaryKey" json:"id"`
+	Name         string `json:"name"`
+	Description  string `json:"description"`
+	Price        string `json:"price"`
+	TimeRes      string `json:"timeRes"`
+	Preparation  string `json:"preparation"`
+	BIO          string `json:"bio"`
+	Category     string `json:"category"`
+	ImageUrl     string `json:"imageUrl"`
+	CreatedAt    string `json:"createdAt"`
 }
 
 // GetCatalogItemById godoc
@@ -25,14 +29,14 @@ type GetCatalogItemByIdResponse struct {
 // @Tags Catalog
 // @Accept json
 // @Produce json
-// @Param request body GetCatalogItemByIdRequest true "Тело запроса с itemId"
+// @Param itemId query uint32 true "ID элемента каталога"
 // @Success 200 {object} GetCatalogItemByIdResponse
 // @Failure 400 {object} GetCatalogItemByIdResponse
 // @Failure 500 {object} GetCatalogItemByIdResponse
-// @Router /catalog/get-by-id [post]
+// @Router /catalog/by-id [get]
 func (s *Server) GetCatalogItemById(c *gin.Context) {
 	var request GetCatalogItemByIdRequest
-	if err := c.ShouldBindJSON(&request); err != nil {
+	if err := c.ShouldBindQuery(&request); err != nil {
 		c.JSON(400, GetCatalogItemByIdResponse{ErrorMessage: fmt.Sprintf("%v", err)})
 		return
 	}
@@ -46,8 +50,10 @@ func (s *Server) GetCatalogItemById(c *gin.Context) {
 		Name:        catalogItem.Name,
 		Description: catalogItem.Description,
 		Price:       catalogItem.Price,
+		TimeRes:     catalogItem.TimeRes,
+		Preparation: catalogItem.Preparation,
+		BIO:         catalogItem.BIO,
 		Category:    fmt.Sprintf("%v", catalogItem.Category),
-		ImageUrl:    catalogItem.ImageUrl,
 		CreatedAt:   catalogItem.CreatedAt,
 	})
 }
